test/error/LexUtf8Overlong.fu
À  //ERROR: Invalid UTF-8 //ERROR: Invalid UTF-8 //ERROR: Invalid character //ERROR: Invalid character
